log/.build-egaroucid.log
Building Egaroucid adapter...
rm -rf coach-engine
# Apply arena-stats patch (JSON stats + GTP default)
# Force rebuild via cmake (cd to source dir first)
rm -rf /home/oliv/dev/agent/othello-refs/coach-adapters/egaroucid/../../egaroucid/src/build_coach
cd /home/oliv/dev/agent/othello-refs/coach-adapters/egaroucid/../../egaroucid/src && cmake -B build_coach -DCMAKE_BUILD_TYPE=Release -DBUILD_CONSOLE=ON -DBUILD_GUI=OFF -DBUILD_ENGINE_LIB=OFF -DBUILD_SHARED_LIBS=OFF && cmake --build build_coach --target Egaroucid_for_Console.out -j$(nproc) || { echo "ERROR: Egaroucid build failed"; exit 1; }
-- The CXX compiler identification is GNU 15.2.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Egaroucid engine variant: SIMD
-- Configuring done (0.1s)
-- Generating done (0.0s)
-- Build files have been written to: /home/oliv/dev/agent/othello-refs/egaroucid/src/build_coach
gmake[1]: Entering directory '/home/oliv/dev/agent/othello-refs/egaroucid/src/build_coach'
[ 50%] Building CXX object CMakeFiles/Egaroucid_for_Console.out.dir/src/Egaroucid_for_Console.cpp.o
In file included from /home/oliv/dev/agent/othello-refs/egaroucid/src/src/engine/ai.hpp:16,
                 from /home/oliv/dev/agent/othello-refs/egaroucid/src/src/engine/engine_all.hpp:12,
                 from /home/oliv/dev/agent/othello-refs/egaroucid/src/src/Egaroucid_for_Console.cpp:12:
/home/oliv/dev/agent/othello-refs/egaroucid/src/src/engine/level.hpp: In function ‘void get_level(int, int, bool*, int*, uint_fast8_t*)’:
/home/oliv/dev/agent/othello-refs/egaroucid/src/src/engine/level.hpp:176:23: error: ‘g_end_depth_override’ was not declared in this scope
  176 |     if (n_empties > ((g_end_depth_override >= 0) ? g_end_depth_override : level_status.complete0)) {
      |                       ^~~~~~~~~~~~~~~~~~~~
/home/oliv/dev/agent/othello-refs/egaroucid/src/src/engine/level.hpp:178:19: error: ‘g_mid_depth_override’ was not declared in this scope
  178 |         *depth = (g_mid_depth_override >= 0) ? g_mid_depth_override : level_status.mid_lookahead;
      |                   ^~~~~~~~~~~~~~~~~~~~
gmake[4]: *** [CMakeFiles/Egaroucid_for_Console.out.dir/build.make:79: CMakeFiles/Egaroucid_for_Console.out.dir/src/Egaroucid_for_Console.cpp.o] Error 1
gmake[3]: *** [CMakeFiles/Makefile2:87: CMakeFiles/Egaroucid_for_Console.out.dir/all] Error 2
gmake[2]: *** [CMakeFiles/Makefile2:94: CMakeFiles/Egaroucid_for_Console.out.dir/rule] Error 2
gmake[1]: *** [Makefile:124: Egaroucid_for_Console.out] Error 2
gmake[1]: Leaving directory '/home/oliv/dev/agent/othello-refs/egaroucid/src/build_coach'
ERROR: Egaroucid build failed
make: *** [Makefile:13: coach-build] Error 1
